<resources>
    <string name="app_name">wordi</string>
    <string name="action_settings">Settings</string>
    <string name="new_game">New Game</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="player_name1">Player 1</string>
    <string name="player_name2">Player 2</string>
    <string name="player_name3">Player 3</string>
    <string name="player_name4">Player 4</string>
    <string name="player_name5">Player 5</string>
    <string name="player_name6">Player 6</string>
    <string name="skip_button">Skip</string>

</resources>
