<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#444444"
    android:layout_height="match_parent"
    tools:context=".scoreFragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/score1Text"
            android:layout_width="62dp"
            android:layout_height="45dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="12dp"
            android:elevation="10dp"
            android:text="10"
            android:textAlignment="textEnd"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@+id/Score1"
            app:layout_constraintTop_toTopOf="@+id/Score1" />

        <TextView
            android:id="@+id/score2Text"
            android:layout_width="62dp"
            android:layout_height="45dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="12dp"
            android:elevation="10dp"
            android:text="10"
            android:textAlignment="textEnd"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@+id/Score2"
            app:layout_constraintTop_toTopOf="@+id/Score2" />

        <TextView
            android:id="@+id/score3Text"
            android:layout_width="62dp"
            android:layout_height="45dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="8dp"
            android:elevation="10dp"
            android:text="10"
            android:textAlignment="textEnd"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@+id/Score3"
            app:layout_constraintTop_toTopOf="@+id/Score3" />

        <TextView
            android:id="@+id/score4Text"
            android:layout_width="62dp"
            android:layout_height="45dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="12dp"
            android:elevation="10dp"
            android:text="10"
            android:textAlignment="textEnd"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@+id/Score4"
            app:layout_constraintTop_toTopOf="@+id/Score4" />

        <TextView
            android:id="@+id/score5Text"
            android:layout_width="62dp"
            android:layout_height="45dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="12dp"
            android:elevation="10dp"
            android:text="10"
            android:textAlignment="textEnd"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@+id/Score5"
            app:layout_constraintTop_toTopOf="@+id/Score5" />

        <TextView
            android:id="@+id/score6Text"
            android:layout_width="62dp"
            android:layout_height="45dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="12dp"
            android:elevation="10dp"
            android:text="10"
            android:textAlignment="textEnd"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@+id/Score6"
            app:layout_constraintTop_toTopOf="@+id/Score6" />

        <Button
            android:id="@+id/skip_button"
            android:layout_width="320dp"
            android:layout_height="64dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray"
            android:text="@string/skip_button"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.569"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Score6" />

        <Button
            android:id="@+id/Score6"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/holo_red_dark"
            android:text="@string/player_name6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/Score5"
            app:layout_constraintTop_toBottomOf="@+id/Score4" />

        <Button
            android:id="@+id/Score5"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/holo_orange_light"
            android:text="@string/player_name5"
            app:layout_constraintEnd_toStartOf="@+id/Score6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Score3" />

        <Button
            android:id="@+id/Score4"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/holo_purple"
            android:text="@string/player_name4"
            app:layout_constraintBottom_toTopOf="@+id/Score6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/Score3"
            app:layout_constraintTop_toBottomOf="@+id/Score2" />

        <Button
            android:id="@+id/Score3"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/holo_orange_dark"
            android:text="@string/player_name3"
            app:layout_constraintBottom_toTopOf="@+id/Score5"
            app:layout_constraintEnd_toStartOf="@+id/Score4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Score1" />

        <Button
            android:id="@+id/Score1"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/player_name1"
            app:layout_constraintEnd_toStartOf="@+id/Score2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/Score2"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/holo_green_dark"
            android:text="@string/player_name2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/Score1"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>
</FrameLayout>